pg-cluster/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pg-cluster-virtualservice
  namespace: pg-cluster
spec:
  hosts:
    - "pg-cluster.local"
  gateways:
    - cnpg/postgres-gateway
  tcp:
    - match:
        - port: 5432
      route:
        - destination:
            host: pg-cluster-pooler-rw.pg-cluster.svc.cluster.local # <service>.<namespace>.svc.cluster.local
            port:
              number: 5432
